# x-copilot

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  x-copilot.sln
config/: FJS727-commands.json  commands-index.json  default-commands.json
demo/: CMakeLists.txt  Default-Grammar.xml  XPlaneDataRefSDKStub.h  demo-win.cpp  demo-win2.cpp  demo.cpp  portaudio-demo.cpp  x-copilot-demo.vcxproj
pocketsphinx-data/xp-XP/: grammar.jsgf  language-model.lm  pronounciation-dictionary.dic
pocketsphinx-data/xp-XP/acoustic-model/: means  sendump  transition_matrices  variances
src/: CMakeLists.txt  Command.cpp  Command.h  CommandConfig.h  CommandExecutor.cpp  CommandExecutor.h  CommandMetadata.h  CommandRecognizer.cpp  CommandRecognizer.h  CommandType.h  CommandsConfigReader.cpp  CommandsConfigReader.h  CommandsProvider.cpp  CommandsProvider.h  FloatCommandExecutor.cpp  FloatCommandExecutor.h  IntCommandExecutor.cpp  IntCommandExecutor.h  Logger.cpp  Logger.h  Microphone.cpp  Microphone.h  MicrophoneHandler.h  PocketsphinxWrapper.cpp  PocketsphinxWrapper.h  Recognizer.cpp  Recognizer.h  StatusWindow.cpp  StatusWindow.h  UnixRecognizer.cpp  UnixRecognizer.h  WinRecognizer.cpp  WinRecognizer.h  XCopilot.cpp  XCopilot.h  XPlaneDataRefSDK.h  defs.h  main.cpp  portaudio-demo.cpp  utils.cpp  (+2 more)
test/: CMakeLists.txt  CommandRecognizerTest.cpp  CommandTest.cpp  CommandsProviderTest.cpp  RecognizerTest.cpp  UnixRecognizerTest.cpp  XCopilotTest.cpp  main.cpp  utilsTest.cpp
test/data/: test-commands.json
test/integration/: CommandsConfigReaderTest.cpp  CommandsTest.cpp
test/util/: XPlaneDataRefSDKMock.h
